# NewItTest

./: .gitignore  Makefile  README.md  example.env  pyproject.toml
backend/: manage.py
backend/core/: admin.py  config.py  settings.py  urls.py
backend/tracker/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/tracker/migrations/: 0001_initial.py  0002_populate_initial_data.py
backend/tracker/static/tracker/js/: transaction_admin_form.js
docker/: docker-compose.dev.yaml
docker/nginx/: dev.conf
