[tool.poetry]
name = "newittest"
version = "0.1.0"
description = "test task"
authors = ["Fotlex <kudron02@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"
pillow = "^12.0.0"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
